vlib/v/checker/tests/struct_init_update_type_err.out
vlib/v/checker/tests/struct_init_update_type_err.vv:13:6: error: expected struct, found `int`
   11 |     i := 2
   12 |     _ := Foo{
   13 |         ...i
      |            ^
   14 |         name: 'f2'
   15 |     }
vlib/v/checker/tests/struct_init_update_type_err.vv:18:6: error: expected struct, found `&int`
   16 |     p := &i
   17 |     _ = Foo{
   18 |         ...p
      |            ^
   19 |     }
   20 |     f2 := Foo2{}
vlib/v/checker/tests/struct_init_update_type_err.vv:22:6: error: struct `Foo2` is not compatible with struct `Foo`
   20 |     f2 := Foo2{}
   21 |     _ = Foo{
   22 |         ...f2
      |            ~~
   23 |     }
   24 |     _ = Foo{
vlib/v/checker/tests/struct_init_update_type_err.vv:34:6: error: struct `Empty` is not compatible with struct `Foo`
   32 |     e := Empty{}
   33 |     _ = Foo{
   34 |         ...e
      |            ^
   35 |     }
   36 | }
